--- a/SA/Views/QuestionView.xaml
+++ b/SA/Views/QuestionView.xaml
@@ -6,12 +6,10 @@
              mc:Ignorable="d"
              x:Class="SA.Views.QuestionView.QuestionView"
              BackgroundColor="#4269C3"
-             xmlns:local="clr-namespace:SA.Models" 
              NavigationPage.HasNavigationBar="false">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
@@ -19,7 +17,6 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -32,19 +29,14 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Label Text="Question" Grid.Row="1" Grid.ColumnSpan="6" Grid.Column="1" x:Name="Stand" TextColor="White" FontFamily="Malgun Gothic" HorizontalOptions="Center" Margin="0" Scale="1" FontSize="20"/>
+        <Label Text="Question" Grid.Row="1" Grid.ColumnSpan="6" Grid.Column="1" x:Name="Stand" TextColor="White" FontFamily="Malgun Gothic" HorizontalOptions="Center" Margin="0"/>
 
-        <Image 
-            Source="{local:ImageResource ResourceID=SA.Images.Icon_map-political.png}"
-            Grid.Row="2" Grid.Column="2" Scale="2" Grid.ColumnSpan="2"
-            />
-        
-        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="3" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal eens" Clicked="SaveAnswer" x:Name="hlm_eens_pnt"/>
-        <Button Text="Eens" Grid.Row="4" Grid.ColumnSpan="6" Grid.Column="1" Clicked="SaveAnswer" x:Name="eens_pnt" BorderWidth="2" BorderRadius="5" BorderColor="#000000"/>
-        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="5" Grid.ColumnSpan="6" Grid.Column="1" Text="Oneens" Clicked="SaveAnswer" x:Name="oneens_pnt"/>
-        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="6" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal oneens" Clicked="SaveAnswer" x:Name="hlm_oneens_pnt" Padding="0"/>
+        <Button Text="Eens" Grid.Row="3" Grid.ColumnSpan="6" Grid.Column="1" Clicked="SaveAnswer" x:Name="eens_pnt" BorderWidth="2" BorderRadius="5" BorderColor="#000000"/>
+        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="2" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal eens" Clicked="SaveAnswer" x:Name="hlm_eens_pnt"/>
+        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="4" Grid.ColumnSpan="6" Grid.Column="1" Text="Oneens" Clicked="SaveAnswer" x:Name="oneens_pnt"/>
+        <Button BorderWidth="2" BorderRadius="5" BorderColor="#000000" Grid.Row="5" Grid.ColumnSpan="6" Grid.Column="1" Text="Helemaal oneens" Clicked="SaveAnswer" x:Name="hlm_oneens_pnt"/>
 
-        <Button BorderColor="Black" BorderWidth="1" Text="Vorige" BackgroundColor="#6CB419" Grid.Row="8" Grid.ColumnSpan="3" Grid.Column="1" Clicked="ViewPreviousQuestion" Padding="0" />
-        <Button BorderColor="Black" BorderWidth="1" Text="Volgende" BackgroundColor="#6CB419" x:Name="volgende" Grid.Row="8" Grid.ColumnSpan="3" Grid.Column="4" Clicked="ViewNextQuestion" Padding="0"/>
+        <Button Text="Vorige" Grid.Row="7" Grid.ColumnSpan="2" Grid.Column="1" Clicked="ViewPreviousQuestion" CornerRadius="25"/>
+        <Button Text="Volgende" x:Name="volgende" Grid.Row="7" Grid.ColumnSpan="2" Grid.Column="5" Clicked="ViewNextQuestion" CornerRadius="25"/>
     </Grid>
 </ContentPage>
